added foods get:id, post, and put routes
