# api/controllers/foods.js
@@ -28,11 +28,80 @@ function getFood(req, res) {
             console.error(err);
         })
         .finally(() => {
-            knex.destroy();
+            // knex.destroy();
         })
+}
+
+function addFood(req, res) {
+	let knex = require('../../knex.js');
+	knex('foods')
+		.insert({
+			food_name: req.body.food_name,
+			created_by: 1,
+			jan: req.body.jan,
+			feb: req.body.feb,
+			mar: req.body.mar,
+			apr: req.body.apr,
+			may: req.body.may,
+			jun: req.body.jun,
+			jul: req.body.jul,
+			aug: req.body.aug,
+			sep: req.body.sep,
+			oct: req.body.oct,
+			nov: req.body.nov,
+			dec: req.body.dec
+		}, '*')
+		.then((foods) => {
+			res.send(foods[0]);
+		})
+		.catch((err) => {
+			console.error(err);
+		})
+		.finally(() => {
+			// knex.destroy();
+		})
+}
+
+function updateFood(req, res) {
+	let knex = require('../../knex.js');
+	let paramId = req.swagger.params.food_id.value;
+	knex('foods')
+		.del()
+		.where('id', paramId)
+		.then(() => {
+			knex('foods')
+			.insert({
+				food_name: req.body.food_name,
+				id: paramId,
+				created_by: 1,
+				jan: req.body.jan,
+				feb: req.body.feb,
+				mar: req.body.mar,
+				apr: req.body.apr,
+				may: req.body.may,
+				jun: req.body.jun,
+				jul: req.body.jul,
+				aug: req.body.aug,
+				sep: req.body.sep,
+				oct: req.body.oct,
+				nov: req.body.nov,
+				dec: req.body.dec
+			}, '*')
+			.then((foods) => {
+				res.send(foods[0]);
+			})
+		})
+		.catch((err) => {
+			console.error(err);
+		})
+		.finally(() => {
+			// knex.destroy();
+		})
 }
 
 module.exports = {
   getAllFoods: getAllFoods,
-  getFood: getFood
+  getFood: getFood,
+	addFood: addFood,
+	updateFood: updateFood
 }
